make 2 inputs to use a timmer easyerr

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     />
   </head>
   <body>
+    <label>Rest </label>
+    <input type="number" value="9"/>
+<!-- Timmer for Rest -->
     <div class="timer">
       <h1>Reset</h1>
       <div class="controls">
@@ -32,6 +35,10 @@
         />
       </svg>
     </div>
+
+
+
+    <!-- Timmer for Training -->
     <div class="timer2">
       <h1>Trainer</h1>
       <div class="controls2">
